--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "framer-motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "@tanstack/react-query": "^5.59.15",
+    "@tanstack/react-virtual": "^3.0.0",
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/sortable": "^8.0.0",
+    "dayjs": "^1.11.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
