feat: add calendar skeleton components

--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "framer-motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "@tanstack/react-query": "^5.84.1",
+    "@tanstack/react-virtual": "^3.13.12",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "dayjs": "^1.11.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
